# Trip_Agent

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  PRD.md  PROJECT-SCOPE.md  README.md  docker-compose.yml  冯茂202207071105开题报告.md
.agents/: AGENTS.md
.agents/rules/: backend.rules.md  frontend.rules.md
.github/workflows/: ci.yml
Dev_Steps/: step0_overview.md  step1_init.md  step2_backend_core.md  step3_rag.md  step4_frontend.md  step5_integration.md  step6_testing.md  step7_final.md
Docs/: ARCHITECTURE.md  BRANCH-STRATEGY.md  STATUS.md  TECH-STACK.md  frontend-design.md
backend/: pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: health.py  router.py
backend/app/db/: connection.py
backend/app/tools/: __init__.py
backend/db/: init.sql
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: globals.css
